Show more info when running tests

--- a/build.gradle
+++ b/build.gradle
@@ -92,8 +92,12 @@ eclipse {
  */
 test {
     include 'org/ggp/base/test/AllTests.class'
-}
 
+    testLogging {
+        exceptionFormat = 'full'
+        showStandardStreams = 'true'
+    }
+}
 
 //Various applications that can be run from Gradle:
 
