--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
         'lib/Guava/guava-14.0.1.jar',
         'lib/Jython/jython.jar',
         'lib/Clojure/clojure.jar',
+        'lib/Clojure/nrepl.jar',
         'lib/Batik/batik-1.7.jar',
         'lib/FlyingSaucer/core-renderer.jar',
         'lib/javassist/javassist.jar',
