--- a/build.xml
+++ b/build.xml
@@ -21,6 +21,7 @@
 		<pathelement location="lib/Jython/jython.jar"/>
 		<pathelement location="lib/Clojure/clojure.jar"/>
 		<pathelement location="lib/Clojure/nrepl.jar"/>
+                <pathelement location="lib/Clojure/claypoole-1.1.2.jar"/>
 		<pathelement location="lib/Guava/guava-14.0.1.jar"/>
 		<pathelement location="lib/JUnit/junit-4.11.jar"/>
 		<pathelement location="lib/JUnit/hamcrest-core-1.3.jar"/>
