--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
         'lib/Clojure/clojure.jar',
         'lib/Clojure/nrepl.jar',
         'lib/Clojure/claypoole-1.1.2.jar',
+        'lib/Clojure/slingshot-0.12.2.jar',
         'lib/Batik/batik-1.7.jar',
         'lib/FlyingSaucer/core-renderer.jar',
         'lib/javassist/javassist.jar',
