Get ready for Monte Carlo
* Add core.match and its hairball of dependencies
* Refactor the strategy definition to be a bit smoother
* Add the Monte Carlo stub

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,14 @@ dependencies {
         'lib/Clojure/nrepl.jar',
         'lib/Clojure/claypoole-1.1.2.jar',
         'lib/Clojure/slingshot-0.12.2.jar',
+        'lib/Clojure/core.match-0.3.0-alpha4.jar',
+        'lib/Clojure/tools.analyzer-0.6.7.jar',
+        'lib/Clojure/tools.analyzer.jvm-0.6.9.jar',
+        'lib/Clojure/core.memoize-0.5.8.jar',
+        'lib/Clojure/core.cache-0.6.4.jar',
+        'lib/Clojure/data.priority-map-0.0.7.jar',
+        'lib/Clojure/asm-all-5.0.4.jar',
+        'lib/Clojure/tools.reader-1.0.0-alpha3.jar',
         'lib/Batik/batik-1.7.jar',
         'lib/FlyingSaucer/core-renderer.jar',
         'lib/javassist/javassist.jar',
