--- a/build.xml
+++ b/build.xml
@@ -23,6 +23,14 @@
 		<pathelement location="lib/Clojure/nrepl.jar"/>
                 <pathelement location="lib/Clojure/claypoole-1.1.2.jar"/>
                 <pathelement location="lib/Clojure/slingshot-0.12.2.jar"/>
+                <pathelement location="lib/Clojure/core.match-0.3.0-alpha4.jar"/>
+                <pathelement location="lib/Clojure/tools.analyzer.jvm-0.6.9.jar"/>
+                <pathelement location="lib/Clojure/tools.analyzer-0.6.7.jar"/>
+                <pathelement location="lib/Clojure/core.memoize-0.5.8.jar"/>
+                <pathelement location="lib/Clojure/core.cache-0.6.4.jar"/>
+                <pathelement location="lib/Clojure/data.priority-map-0.0.7.jar"/>
+                <pathelement location="lib/Clojure/asm-all-5.0.4.jar"/>
+                <pathelement location="lib/Clojure/tools.reader-1.0.0-alpha3.jar"/>
 		<pathelement location="lib/Guava/guava-14.0.1.jar"/>
 		<pathelement location="lib/JUnit/junit-4.11.jar"/>
 		<pathelement location="lib/JUnit/hamcrest-core-1.3.jar"/>
