--- a/build.xml
+++ b/build.xml
@@ -13,6 +13,7 @@
     <property name="source" value="1.7"/>
     <path id="GGP_Base.classpath">
 		<pathelement location="bin"/>
+		<pathelement location="lib/propnet.jar"/>
 		<pathelement location="lib/FlyingSaucer/core-renderer.jar"/>
 		<pathelement location="lib/JFreeChart/jfreechart-1.0.14.jar"/>
 		<pathelement location="lib/JFreeChart/jcommon-1.0.17.jar"/>
